@@ -1,5 +1,12 @@
 2007-06-14  Miguel Sofer  <msofer@users.sf.net>
 
+
+	* generic/tclInt.decls:   Modif to the internals of 
+	* generic/tclInt.h:       TclObjInterpProc to reduce stack 
+	* generic/tclIntDecls.h:  consumption and improve task
+	* generic/tclProc.c:      separation. Changes the interface of
+	TclObjInterpProcCore (patching TclOO simultaneously).
+
 	* generic/tclProc.c (TclObjInterpProcCore): simplified obj
 	management in wrongNumArgs calls.
 	
